--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,11 +8,9 @@
       </div>
       <ul class="navbar-nav ml-auto">
           <!-- ログインしていない時 -->
-          <li class="nav-item mr-5 pt-2">
-            ようこそ、<span class="text-success mr-1">ゲスト</span>さん！
-          </li>
           <li class="nav-item ml-1"><%= link_to " 新規登録", new_user_registration_path, class: 'btn btn-light btn-ms nav-link fas fa-user-plus' %></li>
           <li class="nav-item ml-1"><%= link_to " ログイン", new_user_session_path, class: 'btn btn-light btn-ms nav-link fas fa-sign-in-alt' %></li>
+          <li class="nav-item ml-1"><%= link_to " 投稿一覧", posts_path, class: 'btn btn-light btn-ms nav-link fas fa-tree' %></li>
       </ul>
     </div>
   </nav>
