--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -8,3 +8,18 @@
         <td><%= link_to 'Destroy', post_path(@post), method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger destroy_post_#{@post.id}"%></td>
       <% end %>
   </table>
+  
+<div class="comments">
+<p>コメント件数：<%= @post.post_comments.count %></p>
+<% @post.post_comments.each do |post_comment| %>
+  <p><%= _tag('sample-author1.jpg') %></p>
+  <%= post_comment.user.name %>
+  <%= post_comment.created_at.strftime('%Y/%m/%d') %><%= post_comment.comment %>
+<% end %>
+</div>
+<div class="new-comment">
+<%= form_with(model:[@post, @post_comment], local: true) do |f| %>
+  <%= f.text_area :comment, rows:'5',placeholder: "コメントをここに" %>
+  <%= f.submit "送信する" %>
+<% end %>
+</div>
