--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,13 +8,15 @@
       </div>
       <ul class="navbar-nav ml-auto">
         <% if user_signed_in? %>
-          <li class="nav-item ml-1"><%= link_to " ログアウト", destroy_user_session_path, method: :delete, class: 'btn btn-light btn-ms nav-link fas fa-sign-out-alt' %></li>
+          <!--ログイン時-->
+          <li class="nav-item ml-1"><%= link_to " マイページ", user_path(current_user), class: 'btn btn-light btn-ms nav-link fas fa-tree' %></li>
           <li class="nav-item ml-1"><%= link_to " 投稿一覧", posts_path, class: 'btn btn-light btn-ms nav-link fas fa-tree' %></li>
+          <li class="nav-item ml-1"><%= link_to " ログアウト", destroy_user_session_path, method: :delete, class: 'btn btn-light btn-ms nav-link fas fa-sign-out-alt' %></li>
         <% else %>
           <!-- ログインしていない時 -->
+          <li class="nav-item ml-1"><%= link_to " 投稿一覧", posts_path, class: 'btn btn-light btn-ms nav-link fas fa-tree' %></li>
           <li class="nav-item ml-1"><%= link_to " 新規登録", new_user_registration_path, class: 'btn btn-light btn-ms nav-link fas fa-user-plus' %></li>
           <li class="nav-item ml-1"><%= link_to " ログイン", new_user_session_path, class: 'btn btn-light btn-ms nav-link fas fa-sign-in-alt' %></li>
-          <li class="nav-item ml-1"><%= link_to " 投稿一覧", posts_path, class: 'btn btn-light btn-ms nav-link fas fa-tree' %></li>
         <% end %>
       </ul>
     </div>
