--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,10 +1,10 @@
 <%= form_with model:@post,local:true do |f| %>
   <div class="form-group">
-    <%= f.label :title %>
+    <%= f.label :title, "タイトル" %>
     <%= f.text_field :title, class: 'form-control post_title' %>
   </div>
   <div class="form-group">
-    <%= f.label :opinion %>
+    <%= f.label :body, "本文" %>
     <%= f.text_area :body, class: 'form-control post_body' %>
   </div>
   <div class="form-group">
