--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,7 +2,7 @@
   <h3 class="ml-4 my-4 d-inline-flex">新規会員登録</h3>
 
   <div class="ml-5">
-  <%= form_with model: @usesr, url: user_registration_path, id:'new_user', class: 'new_user', local: true do |f|%>
+  <%= form_with model: @user, url: user_registration_path, id:'new_user', class: 'new_user', local: true do |f|%>
     <%= render "devise/shared/error_messages", resource: resource %>
     <div class="row">
       <label class="col-lg-3">名前</label>
@@ -14,7 +14,7 @@
      <div class="row">
       <label class="col-lg-3">メールアドレス</label>
       <div class="col-lg-3">
-        <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: "sample@example.com", class: 'ml-5' %>
+        <%= f.email_field :email, autoforcus: true, autocomplete: "email", placeholder: "sample@example.com", class: 'ml-5' %>
       </div>
     </div><br>
 
