--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,16 +2,18 @@
   <h4 class="mt-3">マイページ</h4>
   <div class="row">
     <div class="col-md-6">
+      <%= attachment_image_tag @user, :profile_image, :fill, 200, 200, fallback: "no_image.jpg"%>
       <table class="table-light table table-hover">
-        <div class="mb-3 d-flex">
-          <h5 class="ml-2 mb-2 font-weight-bold">登録情報</h5>
-          <%= link_to "編集する", edit_user_path(current_user), class: "btn btn-sm btn-success ml-5 px-3 table_button" %>
-        </div>
         <tr class="col-xs-2">
+          <td class="table-secondary">名前</td>
+          <td><%= @user.name %></td>
           <td class="table-secondary">メールアドレス</td>
-          <td><%= current_user.email %></td>
+          <td><%= @user.email %></td>
+          <td class="table-secondary">自己紹介</td>
+          <td><%= @user.introduction %></td>
         </tr>
       </table>
+      <%= link_to "編集する", edit_user_path(current_user), class: "btn btn-sm btn-success ml-5 px-3 table_button" %>
     </div>
   </div>
 </div>
