--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -4,6 +4,22 @@
     <td><%= @post.title %></td>
     <td><%= @post.body %></td>
     <td>コメント件数：<%= @post.comments.count %></td>
+    <td>
+      <% if @post.liked_by?(current_user) %>
+        <p>
+          <%= link_to post_likes_path(@post.id), method: :delete do %>
+            ♥<%= @post.likes.count %> いいね
+          <% end %>
+        </p>
+      <% else %>
+        <p>
+          <%= link_to post_likes_path(@post.id), method: :post do %>
+            ♡<%= @post.likes.count %> いいね
+          <% end %>
+        </p>
+      <% end %>
+    </td>
+
     <% if @post.user == current_user %>
       <td><%= link_to '編集', edit_post_path(@post), class: "btn btn-sm btn-success edit_post_#{@post.id}" %></td>
       <td><%= link_to '削除', post_path(@post), method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger destroy_post_#{@post.id}"%></td>
