--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,45 +1,5 @@
-<h2>投稿詳細</h2>
-<table class='table'>
-  <tr>
-    <td><%= @post.title %></td>
-    <td><%= @post.body %></td>
-    <td>コメント件数：<%= @post.comments.count %></td>
-    <td>
-      <% if @post.liked_by?(current_user) %>
-        <p>
-          <%= link_to post_likes_path(@post.id), method: :delete do %>
-            ♥<%= @post.likes.count %> いいね
-          <% end %>
-        </p>
-      <% else %>
-        <p>
-          <%= link_to post_likes_path(@post.id), method: :post do %>
-            ♡<%= @post.likes.count %> いいね
-          <% end %>
-        </p>
-      <% end %>
-    </td>
-
-    <% if @post.user == current_user %>
-      <td><%= link_to '編集', edit_post_path(@post), class: "btn btn-sm btn-success edit_post_#{@post.id}" %></td>
-      <td><%= link_to '削除', post_path(@post), method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger destroy_post_#{@post.id}"%></td>
-    <% end %>
-</table>
-
-<div class="comments">
-  <% @post.comments.each do |comment| %>
-    <%= comment.user.name %>
-    <%= comment.created_at.strftime('%Y/%m/%d') %><%= comment.comment %>
-    <% if comment.user == current_user %>
-      <div class="comment-delete">
-        <%= link_to "削除",   post_comment_path(comment.post, comment), method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger" %>
-      </div>
-    <% end %>
-  <% end %>
-</div>
-<div class="new-comment">
-<%= form_with(model:[@post, @comment], local: true) do |f| %>
-  <%= f.text_area :comment, rows:'5',placeholder: "コメントをここに" %>
-  <%= f.submit "送信する" %>
+<% if !User.nil? == true %>
+  <%= render "posts/user", post: @post %>
+<% else %>
+  <%= render "posts/guest", post: @post %>
 <% end %>
-</div>
