投稿詳細修正

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,4 +1,4 @@
-<% if !User.nil? == true %>
+<% if user_signed_in? %>
   <%= render "posts/user", post: @post %>
 <% else %>
   <%= render "posts/guest", post: @post %>
