--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,6 +3,15 @@
   <div class="row">
     <div class="col-md-6">
       <%= attachment_image_tag @user, :profile_image, :fill, 200, 200, fallback: "no_image.jpg"%>
+      <%=link_to "フォロー", follows_user_path(@user.id) %>
+      <%=link_to "フォロワー", followers_user_path(@user.id) %>
+      <% if current_user != @user %>
+          <% if @user.followed_by?(current_user) %>
+              <p><%=link_to "フォロー済み", user_relationships_path(@user.id), method: :delete %></p>
+          <% else %>
+              <p><%=link_to "フォローする", user_relationships_path(@user.id), method: :post %></p>
+          <% end %>
+      <% end %>
       <table class="table-light table table-hover">
         <tr class="col-xs-2">
           <td class="table-secondary">名前</td>
