--- a/app/views/posts/_user.html.erb
+++ b/app/views/posts/_user.html.erb
@@ -1,6 +1,7 @@
 <h2>投稿詳細</h2>
 <table class='table'>
   <tr>
+    <td><%= link_to post.user.name ,user_path(post.user) %></td>
     <td><%= post.title %></td>
     <td><%= post.body %></td>
     <td>コメント件数：<%= post.comments.count %></td>
