--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,7 +1,10 @@
 <h1>投稿一覧</h1>
 <% @posts.each do |post| %>
-  <tr>
-    <td><%= link_to post.title , post_path(post.id) %></td>
-    <td>コメント件数：<%= post.comments.count %></td>
-  </tr>
+  <table>
+    <tr>
+      <td><%= link_to post.user.name %></td>
+      <td><%= link_to post.title , post_path(post.id) %></td>
+      <td>コメント件数：<%= post.comments.count %></td>
+    </tr>
+  </table>
 <% end %>
