--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -13,6 +13,7 @@
           <li class="nav-item ml-1"><%= link_to " 投稿一覧", posts_path, class: 'btn btn-light btn-ms nav-link fas fa-tree' %></li>
           <li class="nav-item ml-1"><%= link_to "新規投稿", new_post_path, class: 'btn btn-light btn-ms nav-link fas fa-book-open' %></li>
           <li class="nav-item ml-1"><%= link_to " ログアウト", destroy_user_session_path, method: :delete, class: 'btn btn-light btn-ms nav-link fas fa-sign-out-alt' %></li>
+          <li class="nav-item ml-1"><%= link_to " お問い合わせ", new_contact_path, class: 'btn btn-light btn-ms nav-link ' %></li>
         <% else %>
           <!-- ログインしていない時 -->
           <li class="nav-item ml-1"><%= link_to " 投稿一覧", posts_path, class: 'btn btn-light btn-ms nav-link fas fa-tree' %></li>
