お問い合わせ機能修正

--- a/app/views/contact_mailer/contact_mail.html.erb
+++ b/app/views/contact_mailer/contact_mail.html.erb
@@ -2,9 +2,9 @@
 
 <p>-----------------------------------------</p>
 
-<p>名前：<%= @contact.name %>様</p>
+<p>名前：<%= @name %>様</p>
 
-<p>メールアドレス：<%= @contact.email %></p>
+<p>メールアドレス：<%= @email %></p>
 
 <p>お問い合わせ内容：<%= @contact.body %></P>
 
