--- a/app/views/contact_mailer/contact_mail.text.erb
+++ b/app/views/contact_mailer/contact_mail.text.erb
@@ -2,8 +2,8 @@
 
 -----------------------------------------
 
-名前：<%= @contact.name %>様
+名前：<%= @name %>様
 
-メールアドレス：<%= @contact.email %>
+メールアドレス：<%= @email %>
 
 お問い合わせ内容：<%= @contact.body %>
