--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,5 +1,8 @@
 <%= form_with model:@post,local:true do |f| %>
   <div class="form-group">
+     <%= f.collection_select :genre_id, Genre.all, :id, :name, prompt: "--選択してください--", size: "30", class: "form-control" %>
+  </div>
+  <div class="form-group">
     <%= f.label :title, "タイトル" %>
     <%= f.text_field :title, class: 'form-control post_title' %>
   </div>
