--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,9 +1,20 @@
 <h1>投稿一覧</h1>
+
+<h1>投稿検索</h1>
+<%= search_form_for @q, url: search_posts_path do |f| %>
+  <%= f.collection_select :genre_id, Genre.all, :id, :name, prompt: "--選択してください--", size: "30", class: "form-control" %>
+  <%= f.label :body_cont, '本文' %>
+  <%= f.search_field :body_cont %>
+  <br>
+  <%= f.submit '検索' %>
+<% end %>
+
 <% @posts.each do |post| %>
   <table>
     <tr>
-      <td><%= link_to post.user.name %></td>
-      <td><%= link_to post.title , post_path(post.id) %></td>
+      <td><%= link_to post.user.name, user_path(post.user.id) %></td>
+      <td><%= link_to post.title, post_path(post.id) %></td>
+      <td><%= post.genre.name %></td>
       <td>コメント件数：<%= post.comments.count %></td>
     </tr>
   </table>
