--- a/app/assets/stylesheets/homes.scss
+++ b/app/assets/stylesheets/homes.scss
@@ -1,3 +1,8 @@
 // Place all the styles related to the homes controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.top-img {
+   width: 100%;
+   min-height: 100vh;
+   background: image-url("Fantastic_world_Forests.jpg") center center / cover no-repeat fixed;
+}
