--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,6 +1,8 @@
-<h1>ここはトップページです</h1>
-<% @ranking.each.with_index(1) do | post, i | %>
-  <%= i %>位
-  <%= post.title %>
-  <%= post.likes.count %>
-<% end %>
+<div class="top-img">
+  <h1>ここはトップページです</h1>
+  <% @ranking.each.with_index(1) do | post, i | %>
+    <%= i %>位
+    <%= post.title %>
+    <%= post.likes.count %>
+  <% end %>
+</div>
