--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -48,6 +48,7 @@
       <%- if controller_name != 'sessions' %>
         <%= link_to "こちら", new_session_path(resource_name) %>
       <% end %>
+        <%= render "devise/shared/links" %>
       からログインしてください
     </div>
 </div>
