--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,4 +1,5 @@
 <div class="top-img">
+  <%= render "layouts/header" %>
   <h1>ここはトップページです</h1>
   <% @ranking.each.with_index(1) do | post, i | %>
     <%= i %>位
