--- a/app/views/posts/search.html.erb
+++ b/app/views/posts/search.html.erb
@@ -10,9 +10,10 @@
   <tbody>
     <% @results.each do |post| %>
       <tr>
-      <td><%= link_to post.user.name, user_path(post.user.id) %></td>
-      <td><%= link_to post.title , post_path(post.id) %></td>
-      <td>コメント件数：<%= post.comments.count %></td>
+        <td><%= link_to post.user.name, user_path(post.user.id) %></td>
+        <td><%= link_to post.title , post_path(post.id) %></td>
+        <td><%= post.genre.name %></td>
+        <td>コメント件数：<%= post.comments.count %></td>
       </tr>
     <% end %>
   </tbody>
