--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,9 +1,14 @@
-<div class="top-img">
+<div class="top-content">
   <%= render "layouts/header" %>
-  <h1>ここはトップページです</h1>
   <% @ranking.each.with_index(1) do | post, i | %>
     <%= i %>位
     <%= post.title %>
     <%= post.likes.count %>
   <% end %>
+</div>
+<div class="top-video">
+  <%= video_tag("/videos/2021.mp4", autoplay: :true, muted: :true ) %>
+</div>
+<div class="about">
+  <h1>〜About〜</h1>
 </div>
