--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,19 +6,19 @@
           <div>空想の樹</div>
         <% end %>
       </div>
-      <ul class="navbar-nav ml-auto">
+      <ul class="navbar-nav">
         <% if user_signed_in? %>
           <!--ログイン時-->
-          <li class="nav-item ml-1"><%= link_to " マイページ", user_path(current_user), class: 'btn btn-light btn-ms nav-link fas fa-user' %></li>
-          <li class="nav-item ml-1"><%= link_to " 投稿一覧", posts_path, class: 'btn btn-light btn-ms nav-link fas fa-tree' %></li>
-          <li class="nav-item ml-1"><%= link_to "新規投稿", new_post_path, class: 'btn btn-light btn-ms nav-link fas fa-book-open' %></li>
-          <li class="nav-item ml-1"><%= link_to " ログアウト", destroy_user_session_path, method: :delete, class: 'btn btn-light btn-ms nav-link fas fa-sign-out-alt' %></li>
-          <li class="nav-item ml-1"><%= link_to " お問い合わせ", new_contact_path, class: 'btn btn-light btn-ms nav-link ' %></li>
+          <li class="nav-item "><%= link_to " マイページ", user_path(current_user), class: 'btn fas fa-user' %></li>
+          <li class="nav-item "><%= link_to " 投稿一覧", posts_path, class: 'btn fas fa-tree' %></li>
+          <li class="nav-item "><%= link_to "新規投稿", new_post_path, class: 'btn fas fa-book-open' %></li>
+          <li class="nav-item "><%= link_to " ログアウト", destroy_user_session_path, method: :delete, class: 'btn fas fa-sign-out-alt' %></li>
+          <li class="nav-item "><%= link_to " お問い合わせ", new_contact_path, class: 'btn' %></li>
         <% else %>
           <!-- ログインしていない時 -->
-          <li class="nav-item ml-1"><%= link_to " 投稿一覧", posts_path, class: 'btn btn-light btn-ms nav-link fas fa-tree' %></li>
-          <li class="nav-item ml-1"><%= link_to " 新規登録", new_user_registration_path, class: 'btn btn-light btn-ms nav-link fas fa-user-plus' %></li>
-          <li class="nav-item ml-1"><%= link_to " ログイン", new_user_session_path, class: 'btn btn-light btn-ms nav-link fas fa-sign-in-alt' %></li>
+          <li class="nav-item "><%= link_to " 投稿一覧", posts_path, class: 'btn fas fa-tree' %></li>
+          <li class="nav-item "><%= link_to " 新規登録", new_user_registration_path, class: 'btn fas fa-user-plus' %></li>
+          <li class="nav-item "><%= link_to " ログイン", new_user_session_path, class: 'btn fas fa-sign-in-alt' %></li>
         <% end %>
       </ul>
     </div>
