動画貼り付け

--- a/app/assets/stylesheets/homes.scss
+++ b/app/assets/stylesheets/homes.scss
@@ -125,8 +125,10 @@ video {
 .about-text {
   font-size: 20px;
   letter-spacing: 1px;
+  margin: 30px;
 }
 
 .about-second {
   margin: 200px 0 100px 0;
+  line-height: 100px;
 }
