--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,6 +1,6 @@
-<div class="top-video">
-  <%= video_tag("/videos/Top_video.mp4", autoplay: :true, muted: :true ) %>
-</div>
+<video class="video" muted autoplay loop >
+  <source src="https://fantasia-top.s3.ap-northeast-1.amazonaws.com/Fantasia_top.mp4" type="video/mp4" >
+</video>
 
 <div class="row">
   <div class="nav-img fadein"></div>
@@ -36,8 +36,7 @@
       <p class="about-text">もしも転生したら. . .</p>
       <p class="about-text">ふとそんなことを考えたり友人と話し合ったりしたことはないですか？</p>
       <p class="about-text">空想の樹は自分の頭の中にある空想や幻想を共有する投稿サイトです。</p>
-      <h2 class="about-second">さあ、</h2>
-      <h2 class="about-second">あなたの想像した世界を解き放とう</h2>
+      <h2 class="about-second">さあ、<br>あなたの想像した世界を解き放とう</h2>
     </div>
   </div>
 </div>
