--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -15,6 +15,7 @@
           <%= f.submit class: 'btn btn-success' %>
         </div>
       <% end %>
+      <%= link_to '削除', post_path(@post), method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger destroy_post_#{@post.id}"%>
   		<%= link_to 'Show', post_path(@post), class: "book_#{@post.id}" %> |
   		<%= link_to 'Back', posts_path, class: "back" %>
   </div>
