--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,14 +18,44 @@
 @import 'font-awesome';
 @import url('https://fonts.googleapis.com/css2?family=Sawarabi+Mincho&display=swap');
 
-.header {
-  background-color: #333;
+body {
+  background-color: #222222;
+  color: #DFDBC4;
 }
 
-.btn {
-  text-shadow: silver 1px 1px 10px;
-  font-size: 15px;
+header {
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  height: 80px;
+  width: 100%;
+  display: flex;
 }
-.btn:hover {
+
+.header-nav {
+  margin: 0 auto;
+  line-height: 80px;
+}
+
+.header-ul {
+  display: flex;
+  list-style: none;
+  padding: 0;
+  margin: 0s;
+  letter-spacing: 5px;
+}
+
+.header-li {
+  padding: 30px 50px;
+  color: #DFDBC4;
+}
+
+.header-li:hover {
+  color: #DFDBC4;
+  text-decoration: none;
   background-color: rgba(51,51,51,0.9);
+}
+
+.container {
+  margin-top: 100px;
 }
