--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,5 +1,5 @@
 <video class="video" muted autoplay >
-  <source src="https://fantasia-top.s3.ap-northeast-1.amazonaws.com/Fantasia_top.mp4" type="video/mp4" >
+  <source src="https://fantasia-top.s3.ap-northeast-1.amazonaws.com/Top.mp4" type="video/mp4" >
 </video>
 
 <div class="row">
