--- a/app/assets/stylesheets/homes.scss
+++ b/app/assets/stylesheets/homes.scss
@@ -51,64 +51,6 @@ video {
   z-index: 1;
 }
 
-.balloon-left {
-  position: relative;
-  width: 50%;
-  margin: 2em 300px;
-  padding: 20px;
-  background: #fff0c6;
-  border-radius: 30px;
-}
-.balloon-left:before {
-  content: "";
-  position: absolute;
-  left: -38px;
-  width: 13px;
-  height: 12px;
-  bottom: 0;
-  background: #fff0c6;
-  border-radius: 50%;
-}
-.balloon-left:after {
-  content: "";
-  position: absolute;
-  left: -24px;
-  width: 20px;
-  height: 18px;
-  bottom: 3px;
-  background: #fff0c6;
-  border-radius: 50%;
-}
-
-.balloon-right {
-  position: relative;
-  width: 50%;
-  margin: 2em 300px 2em auto;
-  padding: 20px;
-  background: #fff0c6;
-  border-radius: 30px;
-}
-.balloon-right:before {
-  content: "";
-  position: absolute;
-  right: -38px;
-  width: 13px;
-  height: 12px;
-  bottom: 0;
-  background: #fff0c6;
-  border-radius: 50%;
-}
-.balloon-right:after {
-  content: "";
-  position: absolute;
-  right: -24px;
-  width: 20px;
-  height: 18px;
-  bottom: 3px;
-  background: #fff0c6;
-  border-radius: 50%;
-}
-
 .about {
   height: 1000px;
   background-color: #222222;
@@ -118,6 +60,7 @@ video {
 }
 
 .about-top {
+  margin-top: 30px;
   letter-spacing: 10px;
   font-size: 70px;
 }
