--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,3 +1,23 @@
 // Place all the styles related to the users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.item_image_btn{
+    display: none;
+}
+
+#img_field {
+  font-size: 15px;
+  font-style: inherit;
+  margin: 0 auto;
+  color: #DFDBC4;
+  border: 1px solid;
+  border-radius: 10px;
+  width: 200px;
+  text-align: center;
+  letter-spacing: 2px;
+  opacity: 0.8;
+}
+
+#img_field:hover {
+  background-color: rgba(51, 51, 51, 0.5);
+}
