--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,54 +1,33 @@
 	<div class="container">
-  <h3 class="ml-4 my-4 d-inline-flex">新規会員登録</h3>
+	  <div class="row justify-content-center">
+	    <div class="col-5">
+        <h3 class="mb-4 text-center">新規会員登録</h3>
 
-  <div class="ml-5">
-  <%= form_with model: @user, url: user_registration_path, id:'new_user', class: 'new_user', local: true do |f|%>
-    <%= render "devise/shared/error_messages", resource: resource %>
-    <div class="row">
-      <label class="col-lg-3">名前</label>
-      <div class="col-lg-3">
-        <%= f.text_field :name, autoforcus: true, autocomplete: "name",  placeholder: "名前", class: 'ml-5' %>
-      </div>
-    </div><br>
+        <%= form_with model: @user, url: user_registration_path, id:'new_user', class: 'new_user', local: true do |f|%>
+          <%= render "devise/shared/error_messages", resource: resource %>
+            <div class="col-12 my-3">
+              <%= f.label :"名前", class: "control-label" %>
+              <%= f.text_field :name, autoforcus: true, autocomplete: "name",  placeholder: "名前", class: 'form-control' %>
+            </div>
+            <div class="col-12 my-3">
+              <%= f.label :"メールアドレス", class: "control-label" %>
+              <%= f.email_field :email, autocomplete: "email", placeholder: "sample@example.com", class: 'form-control' %>
+            </div>
+            <div class="col-12 my-3">
+              <% if @minimum_password_length %>
+                <%= f.label :"パスワード(6文字以上)", class: "control-label" %>
+              <% end %>
+              <%= f.password_field :password, autocomplete: "encrypted_password", class: 'form-control' %>
+            </div>
+            <div class="col-12 my-3">
+              <%= f.label :"パスワード（確認用）", class: "control-label" %>
+              <%= f.password_field :password_confirmation, autocomplete: "encrypted_password", class: 'form-control' %>
+            </div>
+            <div class="col-12 my-3 text-right">
+              <%= f.submit "新規登録", class: "col-4 btn btn-success" %>
+            </div>
+        <% end %>
 
-     <div class="row">
-      <label class="col-lg-3">メールアドレス</label>
-      <div class="col-lg-3">
-        <%= f.email_field :email, autoforcus: true, autocomplete: "email", placeholder: "sample@example.com", class: 'ml-5' %>
-      </div>
-    </div><br>
-
-    <div class="row">
-      <label class="col-lg-3">パスワード
-      <% if @minimum_password_length %>
-        <em>(<%= @minimum_password_length %>文字以上)</em>
-      <% end %></label>
-      <div class="col-lg-3">
-        <%= f.password_field :password, autocomplete: "encrypted_password", class: 'ml-5' %>
-      </div>
-    </div><br>
-
-    <div class="row">
-      <label class="col-lg-3">パスワード（確認用）</label>
-      <div class="col-lg-3">
-        <%= f.password_field :password_confirmation, autocomplete: "encrypted_password", class: 'ml-5' %>
-      </div>
-    </div><br>
-
-    <div class="row actions ml-5">
-      <div class="col-md-8 offset-md-3">
-      <%= f.submit "新規登録", class: "btn btn-success col-lg-2" %>
-      </div>
-    </div>
-  <% end %>
+	    </div>
+	  </div>
   </div>
-
-  <h5 class="ml-4 mt-5 d-inline-flex">既に登録済みの方</h5>
-    <div class="col-lg-12 mt-3 ml-5">
-      <%- if controller_name != 'sessions' %>
-        <%= link_to "こちら", new_session_path(resource_name) %>
-      <% end %>
-        <%= render "devise/shared/links" %>
-      からログインしてください
-    </div>
-</div>
